--- a/root-application/src/App.css
+++ b/root-application/src/App.css
@@ -9,6 +9,15 @@ a, a:visited, a:hover, a:active {
   color: inherit;
 }
 
+.center {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 !important;
+}
+
 .header {
   font-family: "Lato", serif;
   font-weight: 300;
