--- a/root-application/src/App.css
+++ b/root-application/src/App.css
@@ -43,6 +43,9 @@ a, a:visited, a:hover, a:active {
   height: 400px;
   overflow: hidden;
   box-shadow: 15px 15px 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .tile-container > .tile:hover {
@@ -50,9 +53,13 @@ a, a:visited, a:hover, a:active {
   transition: box-shadow 0.5s ease;
 }
 
-.tile-container > .tile > * {
+.tile-container > .tile > *:not([class]) {
   transition: .5s ease all;
-  padding: 1rem;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .tile-container > .tile:hover > * {
