--- a/angular-module/src/app/app.component.html
+++ b/angular-module/src/app/app.component.html
@@ -124,7 +124,7 @@
         <clipPath id="a"><path fill="#fff" d="M0 0h982v239H0z" /></clipPath>
       </defs>
     </svg>
-    <h1>Hello, {{ title }}</h1>
+    <h1>Hello {{ who }}!</h1>
   </div>
 </main>
 
