--- a/root-application/src/App.css
+++ b/root-application/src/App.css
@@ -30,9 +30,9 @@ a, a:visited, a:hover, a:active {
 
 .tile-container {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   flex-wrap: wrap;
-  row-gap: 3rem;
+  gap: 3rem;
 }
 
 .tile-container > .tile {
